--- a/build.gradle
+++ b/build.gradle
@@ -1,41 +1,58 @@
-project.version="0.0.7"
+/*
+	Copyright (C) 2016  Robert Winslow Dalpe
+
+	This program is free software: you can redistribute it and/or modify
+	it under the terms of the GNU Affero General Public License as published by
+	the Free Software Foundation, either version 3 of the License, or
+	(at your option) any later version.
+
+	This program is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	GNU Affero General Public License for more details.
+
+	You should have received a copy of the GNU Affero General Public License
+	along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+project.version = "0.0.7"
 
 buildscript {
-  repositories {
-    mavenCentral()
-  }
-  
-  dependencies {
-    classpath 'commons-io:commons-io:2.4'
-  }
+	repositories {
+		mavenCentral()
+	}
+
+	dependencies {
+		classpath 'commons-io:commons-io:2.4'
+	}
 }
 
 configurations {
-  build
+	build
 }
 
 repositories {
-  mavenCentral()
+	mavenCentral()
 }
 
 dependencies {
-  build 'net.sf.saxon:Saxon-HE:9.6.0-7'
+	build 'net.sf.saxon:Saxon-HE:9.6.0-7'
 }
 
 task clean(type: Delete) {
-  delete outputDir
+	delete outputDir
 }
 
 task zip(type: Zip) {
-  def f = file(outputDir)
-  if(!f.exists()) {
-    f.mkdirs()
-  }
-  
-  archiveName = "${projectName}_${project.version}.zip"
-  destinationDir = f
-  from src
-  include "**/*"
+	def f = file(outputDir)
+	if (!f.exists()) {
+		f.mkdirs()
+	}
+
+	archiveName = "${projectName}_${project.version}.zip"
+	destinationDir = f
+	from src
+	include "**/*"
 }
 
-task dist(dependsOn: ['clean', 'zip']) << { }
+task dist(dependsOn: ['clean', 'zip']) << {}
